Added MSSM_310 and fixed sample_amount and sample_unit; see Cindy Molitor's email of 12/10/2019

--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -30,21 +30,35 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Call `/home/attila/projects/bsm/notebook/2019-12-09-upload-to-ndar/samples-to-upload` and edit the resulting file by removing MSSM_310 from it because that individual does not have pseudo GUID yet."
+    "Call `/home/attila/projects/bsm/notebook/2019-12-09-upload-to-ndar/samples-to-upload`.  Note that a the following had to be done:\n",
+    "* a pseudo-GUID had to be generated with the [NDA GUID tool](https://nda.nih.gov/s/guid/nda-guid.html) for individual CMC_MSSM_310\n",
+    "* CMC_MSSM_310 was added to:\n",
+    "    1. `ada:/projects/bsm/data/dnalib/BSM_Project_Chess.csv`\n",
+    "    1. CMC_Human_WGS_metadata_working.csv [syn17021773](https://www.synapse.org/#!Synapse:syn17021773)\n",
+    "    1. genomics_subject02_U01MH106891_Chess.csv [syn12128754](https://www.synapse.org/#!Synapse:syn12128754)\n",
+    "    1. nichd_btb02_U01MH106891_Chess.csv [syn12154562](https://www.synapse.org/#!Synapse:syn12154562)\n",
+    "* CMC_MSSM_168 and CMC_MSSM_327 have been similarly added although they are not among the current set of samples to be uploaded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "chess-2019-12-09-genomics_sample03.csv\n",
+      "chess-2019-12-09-genomics_subject02.csv\n",
+      "chess-2019-12-09-nichd_btb02.csv\n",
+      "genomics_sample03_template.csv\n",
+      "genomics_subject02_U01MH106891_Chess.csv\n",
+      "nichd_btb02_U01MH106891_Chess.csv\n",
       "samples-to-upload.csv\n",
       "samples-to-upload-MSSM_310.csv\n"
      ]
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -79,16 +93,19 @@
       "MSSM_193,NeuN_pl\n",
       "MSSM_295,NeuN_pl\n",
       "MSSM_304,NeuN_pl\n",
+      "MSSM_310,NeuN_pl\n",
       "MSSM_331,NeuN_pl\n",
       "MSSM_338,NeuN_pl\n",
-      "PITT_036,NeuN_pl\n"
+      "PITT_036,NeuN_pl\n",
+      "PITT_060,NeuN_pl\n",
+      "PITT_101,NeuN_pl\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "cd /projects/bsm/attila/results/2019-12-09-upload-to-ndar\n",
-    "head samples-to-upload-MSSM_310.csv"
+    "cat samples-to-upload.csv"
    ]
   },
   {
@@ -100,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +168,7 @@
       "processing MSSM_193 NeuN_pl\n",
       "processing MSSM_295 NeuN_pl\n",
       "processing MSSM_304 NeuN_pl\n",
+      "processing MSSM_310 NeuN_pl\n",
       "processing MSSM_331 NeuN_pl\n",
       "processing MSSM_338 NeuN_pl\n",
       "processing PITT_036 NeuN_pl\n",
@@ -162,7 +180,7 @@
    "source": [
     "%%bash\n",
     "cd /projects/bsm/attila/results/2019-12-09-upload-to-ndar\n",
-    "~/projects/bsm/src/cmc_submit2ndar.py -d . -p chess-2019-12-09- samples-to-upload-MSSM_310.csv"
+    "~/projects/bsm/src/cmc_submit2ndar.py -d . -p chess-2019-12-09- samples-to-upload.csv"
    ]
   },
   {
@@ -174,20 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 248\n",
-      "-rw-rw-r-- 1 attila projects  39163 Dec 10 15:23 chess-2019-12-09-genomics_sample03.csv\n",
-      "-rw-rw-r-- 1 attila projects   2377 Dec 10 15:23 chess-2019-12-09-genomics_subject02.csv\n",
-      "-rw-rw-r-- 1 attila projects   7274 Dec 10 15:23 chess-2019-12-09-nichd_btb02.csv\n",
-      "-rw-rw-r-- 1 attila projects 166819 Dec 10 15:23 nichd_btb02_U01MH106891_Chess.csv\n",
+      "total 244\n",
+      "-rw-rw-r-- 1 attila projects  39724 Dec 12 19:04 chess-2019-12-09-genomics_sample03.csv\n",
+      "-rw-rw-r-- 1 attila projects   2539 Dec 12 19:04 chess-2019-12-09-genomics_subject02.csv\n",
+      "-rw-rw-r-- 1 attila projects   7832 Dec 12 19:04 chess-2019-12-09-nichd_btb02.csv\n",
+      "-rw-rw-r-- 1 attila projects  16373 Dec 12 18:54 genomics_subject02_U01MH106891_Chess.csv\n",
+      "-rw-rw-r-- 1 attila projects 166318 Dec 12 18:54 nichd_btb02_U01MH106891_Chess.csv\n",
       "-rw-rw-r-- 1 attila projects    532 Dec 10 15:23 genomics_sample03_template.csv\n",
-      "-rw-rw-r-- 1 attila projects  18256 Dec 10 15:23 genomics_subject02_U01MH106891_Chess.csv\n",
       "-rw-rw-r-- 1 attila projects    200 Dec 10 15:16 samples-to-upload-MSSM_310.csv\n",
       "-rw-rw-r-- 1 attila projects    217 Dec 10 15:15 samples-to-upload.csv\n"
      ]
@@ -207,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -234,12 +252,12 @@
     {
      "data": {
       "text/plain": [
-       "[File(createdOn='2019-12-10T20:50:05.317Z', parentId='syn21344929', versionLabel='1', name='chess-2019-12-09-genomics_subject02.csv', modifiedBy='3338602', modifiedOn='2019-12-10T20:50:05.823Z', files=['chess-2019-12-09-genomics_subject02.csv'], dataFileHandleId='46426651', versionNumber=1, etag='4a03b638-6269-499f-bcb6-9934bcb41bb0', createdBy='3338602', cacheDir='/projects/bsm/attila/results/2019-12-09-upload-to-ndar', path='/projects/bsm/attila/results/2019-12-09-upload-to-ndar/chess-2019-12-09-genomics_subject02.csv', synapseStore=True, concreteType='org.sagebionetworks.repo.model.FileEntity', id='syn21425918', _file_handle={'id': '46426651', 'etag': '9cec160f-9980-445e-a624-aa8fae932d6a', 'createdBy': '3338602', 'createdOn': '2019-12-10T20:50:05.000Z', 'concreteType': 'org.sagebionetworks.repo.model.file.S3FileHandle', 'contentType': 'text/csv', 'contentMd5': 'aafe0ad95ac5950523608bbf3e7a3887', 'fileName': 'chess-2019-12-09-genomics_subject02.csv', 'storageLocationId': 1, 'contentSize': 2377, 'bucketName': 'proddata.sagebase.org', 'key': '3338602/b79b7b16-1ca9-4fc8-9889-89d5e99e5d10/chess-2019-12-09-genomics_subject02.csv', 'isPreview': False, 'externalURL': None}),\n",
-       " File(name='chess-2019-12-09-nichd_btb02.csv', parentId='syn21344929', versionLabel='1', createdOn='2019-12-10T20:50:07.664Z', modifiedBy='3338602', files=['chess-2019-12-09-nichd_btb02.csv'], id='syn21425919', versionNumber=1, _file_handle={'id': '46426653', 'etag': 'e488e8f7-34f9-4b2a-8ebc-57f0b9b2ed1f', 'createdBy': '3338602', 'createdOn': '2019-12-10T20:50:07.000Z', 'concreteType': 'org.sagebionetworks.repo.model.file.S3FileHandle', 'contentType': 'text/csv', 'contentMd5': 'ef3495d10242401f7febea4f3a905c6a', 'fileName': 'chess-2019-12-09-nichd_btb02.csv', 'storageLocationId': 1, 'contentSize': 7274, 'bucketName': 'proddata.sagebase.org', 'key': '3338602/9f0ba96d-3910-4d35-ac8a-5ca6ad211f18/chess-2019-12-09-nichd_btb02.csv', 'isPreview': False, 'externalURL': None}, etag='7da729de-2049-467e-b5f1-c453e5280d82', dataFileHandleId='46426653', createdBy='3338602', path='/projects/bsm/attila/results/2019-12-09-upload-to-ndar/chess-2019-12-09-nichd_btb02.csv', synapseStore=True, concreteType='org.sagebionetworks.repo.model.FileEntity', modifiedOn='2019-12-10T20:50:07.845Z', cacheDir='/projects/bsm/attila/results/2019-12-09-upload-to-ndar'),\n",
-       " File(files=['chess-2019-12-09-genomics_sample03.csv'], name='chess-2019-12-09-genomics_sample03.csv', etag='59688bcb-04be-4786-b08d-0595c858b400', path='/projects/bsm/attila/results/2019-12-09-upload-to-ndar/chess-2019-12-09-genomics_sample03.csv', parentId='syn21344929', _file_handle={'id': '46426654', 'etag': 'f828edc9-b4a8-4685-9f9b-52ceb5872d61', 'createdBy': '3338602', 'createdOn': '2019-12-10T20:50:10.000Z', 'concreteType': 'org.sagebionetworks.repo.model.file.S3FileHandle', 'contentType': 'text/csv', 'contentMd5': 'fe24b97652e5f19aa8a5ca27145c127f', 'fileName': 'chess-2019-12-09-genomics_sample03.csv', 'storageLocationId': 1, 'contentSize': 39163, 'bucketName': 'proddata.sagebase.org', 'key': '3338602/b876ecc4-c395-4fa9-8e3a-f1e67de48511/chess-2019-12-09-genomics_sample03.csv', 'isPreview': False, 'externalURL': None}, versionLabel='1', dataFileHandleId='46426654', id='syn21425920', modifiedOn='2019-12-10T20:50:10.620Z', createdOn='2019-12-10T20:50:10.519Z', versionNumber=1, createdBy='3338602', cacheDir='/projects/bsm/attila/results/2019-12-09-upload-to-ndar', synapseStore=True, concreteType='org.sagebionetworks.repo.model.FileEntity', modifiedBy='3338602')]"
+       "[File(grant=['U01MH106891'], etag='2ee660f5-d1fa-4a12-8a5b-c412e4e5986f', cacheDir='/projects/bsm/attila/results/2019-12-09-upload-to-ndar', synapseStore=True, group=['Akbarian-Chess-Walsh'], modifiedBy='3338602', versionLabel='2', files=['chess-2019-12-09-genomics_subject02.csv'], nda_short_name=['genomics_subject02'], createdOn='2019-12-10T20:50:05.317Z', parentId='syn21344929', name='chess-2019-12-09-genomics_subject02.csv', _file_handle={'id': '46504203', 'etag': 'a281b7b6-3d12-40bd-b3f7-36155d903044', 'createdBy': '3338602', 'createdOn': '2019-12-13T00:05:52.000Z', 'concreteType': 'org.sagebionetworks.repo.model.file.S3FileHandle', 'contentType': 'text/csv', 'contentMd5': '205e621a8ab33ead0b10c94b94b36fbf', 'fileName': 'chess-2019-12-09-genomics_subject02.csv', 'storageLocationId': 1, 'contentSize': 2539, 'bucketName': 'proddata.sagebase.org', 'key': '3338602/5297553d-4f9f-4523-b337-b71b0dca70a6/chess-2019-12-09-genomics_subject02.csv', 'previewId': '46504204', 'isPreview': False, 'externalURL': None}, dataFileHandleId='46504203', modifiedOn='2019-12-13T00:05:52.661Z', concreteType='org.sagebionetworks.repo.model.FileEntity', id='syn21425918', createdBy='3338602', versionNumber=2, path='/projects/bsm/attila/results/2019-12-09-upload-to-ndar/chess-2019-12-09-genomics_subject02.csv', primary_investigator=['Chess']),\n",
+       " File(grant=['U01MH106891'], cacheDir='/projects/bsm/attila/results/2019-12-09-upload-to-ndar', synapseStore=True, group=['Akbarian-Chess-Walsh'], modifiedBy='3338602', _file_handle={'id': '46504205', 'etag': '4fa90a85-4380-4f20-8fbc-babd71774e84', 'createdBy': '3338602', 'createdOn': '2019-12-13T00:05:54.000Z', 'concreteType': 'org.sagebionetworks.repo.model.file.S3FileHandle', 'contentType': 'text/csv', 'contentMd5': '2fd1c4ec2924c2a5008bc707e5af9c08', 'fileName': 'chess-2019-12-09-nichd_btb02.csv', 'storageLocationId': 1, 'contentSize': 7832, 'bucketName': 'proddata.sagebase.org', 'key': '3338602/b4571a2e-8d70-40b9-a8f7-8b78eb682ca0/chess-2019-12-09-nichd_btb02.csv', 'previewId': '46504206', 'isPreview': False, 'externalURL': None}, dataFileHandleId='46504205', nda_short_name=['nichd_btb02'], versionLabel='2', parentId='syn21344929', path='/projects/bsm/attila/results/2019-12-09-upload-to-ndar/chess-2019-12-09-nichd_btb02.csv', concreteType='org.sagebionetworks.repo.model.FileEntity', etag='b3c51e73-b7d9-4f9a-ae24-c1b98c5aa84e', name='chess-2019-12-09-nichd_btb02.csv', createdOn='2019-12-10T20:50:07.664Z', files=['chess-2019-12-09-nichd_btb02.csv'], id='syn21425919', modifiedOn='2019-12-13T00:05:55.488Z', createdBy='3338602', versionNumber=2, primary_investigator=['Chess']),\n",
+       " File(files=['chess-2019-12-09-genomics_sample03.csv'], grant=['U01MH106891'], dataFileHandleId='46504207', cacheDir='/projects/bsm/attila/results/2019-12-09-upload-to-ndar', synapseStore=True, group=['Akbarian-Chess-Walsh'], modifiedBy='3338602', etag='2930cfca-8946-46e3-bf97-fad1ffea1ab7', id='syn21425920', versionLabel='2', _file_handle={'id': '46504207', 'etag': '0099c2a2-ac2a-441f-a660-e0a7fc6d59a9', 'createdBy': '3338602', 'createdOn': '2019-12-13T00:05:57.000Z', 'concreteType': 'org.sagebionetworks.repo.model.file.S3FileHandle', 'contentType': 'text/csv', 'contentMd5': '80458fafc3bd50faec2a5158beefa31b', 'fileName': 'chess-2019-12-09-genomics_sample03.csv', 'storageLocationId': 1, 'contentSize': 39724, 'bucketName': 'proddata.sagebase.org', 'key': '3338602/22498848-6fa3-4833-8482-796eb007db19/chess-2019-12-09-genomics_sample03.csv', 'isPreview': False, 'externalURL': None}, path='/projects/bsm/attila/results/2019-12-09-upload-to-ndar/chess-2019-12-09-genomics_sample03.csv', parentId='syn21344929', nda_short_name=['genomics_sample03'], modifiedOn='2019-12-13T00:05:57.011Z', createdOn='2019-12-10T20:50:10.519Z', concreteType='org.sagebionetworks.repo.model.FileEntity', name='chess-2019-12-09-genomics_sample03.csv', createdBy='3338602', versionNumber=2, primary_investigator=['Chess'])]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
