--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -46,21 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chess-2019-12-09-genomics_sample03.csv\n",
-      "chess-2019-12-09-genomics_subject02.csv\n",
-      "chess-2019-12-09-nichd_btb02.csv\n",
-      "genomics_sample03_template.csv\n",
-      "genomics_subject02_U01MH106891_Chess.csv\n",
-      "nichd_btb02_U01MH106891_Chess.csv\n",
-      "samples-to-upload.csv\n",
-      "samples-to-upload-MSSM_310.csv\n"
+      "samples-to-upload.csv\n"
      ]
     }
    ],
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -192,21 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 244\n",
-      "-rw-rw-r-- 1 attila projects  39724 Dec 12 19:04 chess-2019-12-09-genomics_sample03.csv\n",
-      "-rw-rw-r-- 1 attila projects   2539 Dec 12 19:04 chess-2019-12-09-genomics_subject02.csv\n",
-      "-rw-rw-r-- 1 attila projects   7832 Dec 12 19:04 chess-2019-12-09-nichd_btb02.csv\n",
-      "-rw-rw-r-- 1 attila projects  16373 Dec 12 18:54 genomics_subject02_U01MH106891_Chess.csv\n",
-      "-rw-rw-r-- 1 attila projects 166318 Dec 12 18:54 nichd_btb02_U01MH106891_Chess.csv\n",
-      "-rw-rw-r-- 1 attila projects    532 Dec 10 15:23 genomics_sample03_template.csv\n",
-      "-rw-rw-r-- 1 attila projects    200 Dec 10 15:16 samples-to-upload-MSSM_310.csv\n",
+      "total 240\n",
+      "-rw-rw-r-- 1 attila projects  39724 Dec 12 19:25 chess-2019-12-09-genomics_sample03.csv\n",
+      "-rw-rw-r-- 1 attila projects   2539 Dec 12 19:25 chess-2019-12-09-genomics_subject02.csv\n",
+      "-rw-rw-r-- 1 attila projects   7832 Dec 12 19:25 chess-2019-12-09-nichd_btb02.csv\n",
+      "-rw-rw-r-- 1 attila projects    532 Dec 12 19:24 genomics_sample03_template.csv\n",
+      "-rw-rw-r-- 1 attila projects  16373 Dec 12 19:24 genomics_subject02_U01MH106891_Chess.csv\n",
+      "-rw-rw-r-- 1 attila projects 166318 Dec 12 19:24 nichd_btb02_U01MH106891_Chess.csv\n",
       "-rw-rw-r-- 1 attila projects    217 Dec 10 15:15 samples-to-upload.csv\n"
      ]
     }
