Fixed -b flag in submit2nda.py and wrote documentation

--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,13 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "chess-2019-12-09-genomics_sample03.csv\n",
+      "chess-2019-12-09-genomics_subject02.csv\n",
+      "chess-2019-12-09-nichd_btb02.csv\n",
+      "genomics_sample03_template.csv\n",
+      "genomics_subject02_U01MH106891_Chess.csv\n",
+      "nichd_btb02_U01MH106891_Chess.csv\n",
       "samples-to-upload.csv\n"
      ]
     }
@@ -72,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +257,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: submit2nda.py [-h] [-t TITLE] [-u USER] [-p PASSWORD] [-c COLLECTION]\n",
+      "                     [-l LIB] [-b]\n",
+      "                     btb gsub gsam\n",
+      "\n",
+      "positional arguments:\n",
+      "  btb                   b tissue bank file\n",
+      "  gsub                  genomic subjects file\n",
+      "  gsam                  genomic samples file\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  -t TITLE, --title TITLE\n",
+      "                        submission title\n",
+      "  -u USER, --user USER  NDA user name\n",
+      "  -p PASSWORD, --password PASSWORD\n",
+      "                        password\n",
+      "  -c COLLECTION, --collection COLLECTION\n",
+      "                        NDA collection\n",
+      "  -l LIB, --lib LIB     TNseq calling algorithm\n",
+      "  -b, --build           build package\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "/home/attila/projects/bsm/src/submit2nda.py -h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd /projects/bsm/attila/results/2019-12-09-upload-to-ndar\n",
+    "/home/attila/projects/bsm/src/submit2nda.py -t '2019-12-09' -b chess-2019-12-09-nichd_btb02.csv chess-2019-12-09-genomics_subject02.csv chess-2019-12-09-genomics_sample03.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +313,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 33839,\n",
-      "  \"iopub_port\": 49505,\n",
-      "  \"stdin_port\": 41441,\n",
-      "  \"control_port\": 49385,\n",
-      "  \"hb_port\": 53901,\n",
+      "  \"shell_port\": 47473,\n",
+      "  \"iopub_port\": 59475,\n",
+      "  \"stdin_port\": 53077,\n",
+      "  \"control_port\": 47681,\n",
+      "  \"hb_port\": 39989,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"2649fe81-f524a96cffc862cc9831756c\",\n",
+      "  \"key\": \"8d7cf02c-b9e1359cdefd9e97eabda90a\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -284,7 +328,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-bc3bcbe7-2c05-4a41-820d-621d18a39726.json\n",
+      "    $> jupyter <app> --existing kernel-5bbf9866-7f64-4ffb-8203-aaccc6c85e7f.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
