--- a/presentations/2019-08-27-bsmn-workshop/2019-08-27-bsmn-workshop.tex
+++ b/presentations/2019-08-27-bsmn-workshop/2019-08-27-bsmn-workshop.tex
@@ -126,24 +126,24 @@ NA12892 & 72 & 86 & 100 \\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Allele frequency}
+\begin{frame}{Variant Allele Frequency (VAF) distribution in mix1}
 \begin{columns}[t]
 \begin{column}{0.5\textwidth}
 
 {\tiny
 \begin{tabular}{c|ccc}
 genotype & \multicolumn{3}{c}{VAF (\%)} \\
-& mix1 &  mix2 & mix3 \\
+& mix1 \\
 \hline
-0001 & 36 & 43 & 50\\
-0010 & 8 & 4 & 0\\
-0100 & 4 & 2 & 0\\
-1000 & 2 & 1 & 0\\
-0002 & 72 & 86 & 100\\
-... & ... & ... & ...\\
-2212 & 92 & 96 & 100\\
-2221 & 64 & 57 & 50\\
-2222 & 100 & 100 & 100\\
+0001 & 36 \\
+0010 & 8 \\
+0100 & 4 \\
+1000 & 2 \\
+0002 & 72 \\
+... & ... \\
+2212 & 92 \\
+2221 & 64 \\
+2222 & 100 \\
 \end{tabular}
 }
 
