--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This data upload, named 2019-12-09, uses the new cmc_submit2ndar.py command line tool based on the earlier version of the same file, the cmc_submit2ndar module, which can still be imported into a python session.  Cindy Molitor from Sage (cindy.molitor@sagebase.org) assisted me in validating the manifests.  David Obenshain of NIMH Data Archive Help Desk (ndahelp@mail.nih.gov) helped configure nda-tools v0.1.21, see /home/attila/.NDATools/settings.cfg since the first upload attempt failed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Making manifests for the newest upload to NDA using the improved ~/projects/bsm/src/cmc_submit2ndar.py script."
    ]
   },
@@ -304,47 +311,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 47473,\n",
-      "  \"iopub_port\": 59475,\n",
-      "  \"stdin_port\": 53077,\n",
-      "  \"control_port\": 47681,\n",
-      "  \"hb_port\": 39989,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"8d7cf02c-b9e1359cdefd9e97eabda90a\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-5bbf9866-7f64-4ffb-8203-aaccc6c85e7f.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
    "source": [
-    "%connect_info"
+    "The first submission attempt (12/17/2019) failed so the NIMH Data Archive Help Desk was contacted.  David Obenshain identified the error (see his email of 12/30/2019) so the resubmission on 1/3/2020 was successful.  See `results/2019-12-09-upload-to-ndar/upload-20200102T134656.stdout`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
