third attempt at 2019-12-09-upload-to-ndar

--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -307,14 +307,14 @@
    "source": [
     "%%bash\n",
     "cd /projects/bsm/attila/results/2019-12-09-upload-to-ndar\n",
-    "/home/attila/projects/bsm/src/submit2nda.py -t '2019-12-09' -b chess-2019-12-09-nichd_btb02.csv chess-2019-12-09-genomics_subject02.csv chess-2019-12-09-genomics_sample03.csv"
+    "/home/attila/projects/bsm/src/submit2nda.py -t '2019-12-09' -a BSMN-S3 -b chess-2019-12-09-nichd_btb02.csv chess-2019-12-09-genomics_subject02.csv chess-2019-12-09-genomics_sample03.csv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first submission attempt (12/17/2019) failed so the NIMH Data Archive Help Desk was contacted.  David Obenshain identified the error (see his email of 12/30/2019) so the resubmission on 1/3/2020 was successful.  See `results/2019-12-09-upload-to-ndar/upload-20200102T134656.stdout`."
+    "Note that the first submission attempt (12/17/2019) failed so the NIMH Data Archive Help Desk was contacted.  David Obenshain identified the error (see his email of 12/30/2019) so the resubmission on 1/3/2020 was not successful either.  See `results/2019-12-09-upload-to-ndar/upload-20200102T134656.stdout`."
    ]
   }
  ],
