fixed NDA submission script and resubmitted data

--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -264,19 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: submit2nda.py [-h] [-t TITLE] [-u USER] [-p PASSWORD] [-c COLLECTION]\n",
-      "                     [-l LIB] [-b]\n",
+      "usage: submit2nda.py [-h] [-t TITLE] [-d DESCRIPTION] [-u USER] [-p PASSWORD]\n",
+      "                     [-c COLLECTION] [-l LIB] [-b]\n",
       "                     btb gsub gsam\n",
       "\n",
       "positional arguments:\n",
-      "  btb                   b tissue bank file\n",
+      "  btb                   brain and tissue bank file\n",
       "  gsub                  genomic subjects file\n",
       "  gsam                  genomic samples file\n",
       "\n",
@@ -284,12 +284,14 @@
       "  -h, --help            show this help message and exit\n",
       "  -t TITLE, --title TITLE\n",
       "                        submission title\n",
+      "  -d DESCRIPTION, --description DESCRIPTION\n",
+      "                        description\n",
       "  -u USER, --user USER  NDA user name\n",
       "  -p PASSWORD, --password PASSWORD\n",
       "                        password\n",
       "  -c COLLECTION, --collection COLLECTION\n",
       "                        NDA collection\n",
-      "  -l LIB, --lib LIB     TNseq calling algorithm\n",
+      "  -l LIB, --lib LIB     data file directory\n",
       "  -b, --build           build package\n"
      ]
     }
@@ -307,7 +309,7 @@
    "source": [
     "%%bash\n",
     "cd /projects/bsm/attila/results/2019-12-09-upload-to-ndar\n",
-    "/home/attila/projects/bsm/src/submit2nda.py -t '2019-12-09' -a BSMN-S3 -b chess-2019-12-09-nichd_btb02.csv chess-2019-12-09-genomics_subject02.csv chess-2019-12-09-genomics_sample03.csv"
+    "/home/attila/projects/bsm/src/submit2nda.py -t '2019-12-09' -d 'Illumina reads in FASTQ and BAM' -b chess-2019-12-09-nichd_btb02.csv chess-2019-12-09-genomics_subject02.csv chess-2019-12-09-genomics_sample03.csv"
    ]
   },
   {
