Fixed bug that failed to remove sample specific records from PON

--- a/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
+++ b/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -54,12 +45,14 @@
        " '/projects/bsm/alignments/MSSM_369/MSSM_369_muscle.bam',\n",
        " '/projects/bsm/alignments/MSSM_193/MSSM_193_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/MSSM_056/MSSM_056_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_056/MSSM_056_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/MSSM_106/MSSM_106_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/MSSM_106/MSSM_106_muscle.bam',\n",
        " '/projects/bsm/alignments/MSSM_106/MSSM_106_NeuN_mn.bam',\n",
        " '/projects/bsm/alignments/MSSM_338/MSSM_338_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/PITT_036/PITT_036_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/MSSM_331/MSSM_331_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_331/MSSM_331_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/MSSM_391/MSSM_391_NeuN_pl.bam',\n",
        " '/projects/bsm/alignments/MSSM_391/MSSM_391_muscle.bam',\n",
        " '/projects/bsm/alignments/MSSM_391/MSSM_391_NeuN_mn.bam',\n",
@@ -118,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "'/projects/bsm/attila/results/2019-11-13-panel-of-normals/bsm-cmc-pon.vcf.gz'"
+       "'/projects/bsm/attila/results/2019-11-13-panel-of-normals/pon-v1.vcf.gz'"
       ]
      },
      "execution_count": 3,
@@ -127,7 +120,7 @@
     }
    ],
    "source": [
-    "ponvcf = tnseq_pon.resultdir + os.path.sep + 'bsm-cmc-pon.vcf.gz'\n",
+    "ponvcf = tnseq_pon.resultdir + os.path.sep + 'pon-v1.vcf.gz'\n",
     "ponvcf"
    ]
   },
@@ -249,8 +242,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Samples included in the PON\n",
+    "\n",
+    "Which samples are included in the PON VCF?  Which are excluded from it?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MSSM_033_NeuN_pl',\n",
+       " 'MSSM_056_NeuN_pl',\n",
+       " 'MSSM_056_muscle',\n",
+       " 'MSSM_065_NeuN_pl',\n",
+       " 'MSSM_106_NeuN_mn',\n",
+       " 'MSSM_106_NeuN_pl',\n",
+       " 'MSSM_106_muscle',\n",
+       " 'MSSM_109_NeuN_mn',\n",
+       " 'MSSM_109_NeuN_pl',\n",
+       " 'MSSM_109_muscle',\n",
+       " 'MSSM_118_NeuN_pl',\n",
+       " 'MSSM_118_muscle',\n",
+       " 'MSSM_175_NeuN_pl',\n",
+       " 'MSSM_179_NeuN_mn',\n",
+       " 'MSSM_183_NeuN_mn',\n",
+       " 'MSSM_183_NeuN_pl',\n",
+       " 'MSSM_183_muscle',\n",
+       " 'MSSM_193_NeuN_pl',\n",
+       " 'MSSM_295_muscle',\n",
+       " 'MSSM_304_muscle',\n",
+       " 'MSSM_310_NeuN_pl',\n",
+       " 'MSSM_331_muscle',\n",
+       " 'MSSM_338_NeuN_pl',\n",
+       " 'MSSM_369_NeuN_mn',\n",
+       " 'MSSM_369_NeuN_pl',\n",
+       " 'MSSM_369_muscle',\n",
+       " 'MSSM_391_NeuN_mn',\n",
+       " 'MSSM_391_NeuN_pl',\n",
+       " 'MSSM_391_muscle',\n",
+       " 'PITT_060_NeuN_pl',\n",
+       " 'PITT_101_NeuN_pl',\n",
+       " 'PITT_118_NeuN_mn',\n",
+       " 'PITT_118_NeuN_pl'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_samples = set([os.path.basename(x).replace('.bam', '') for x in bamlist])\n",
+    "vcfponlist = glob.glob('/projects/bsm/attila/results/2019-11-13-panel-of-normals/VCFs/*.vcf.gz')\n",
+    "included_samples = set([os.path.basename(x).replace('.vcf.gz', '') for x in vcfponlist])\n",
+    "included_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MSSM_179_NeuN_pl',\n",
+       " 'MSSM_179_muscle',\n",
+       " 'MSSM_215_NeuN_pl',\n",
+       " 'MSSM_295_NeuN_pl',\n",
+       " 'MSSM_304_NeuN_pl',\n",
+       " 'MSSM_331_NeuN_pl',\n",
+       " 'MSSM_373_NeuN_pl',\n",
+       " 'PITT_010_NeuN_mn',\n",
+       " 'PITT_010_NeuN_pl',\n",
+       " 'PITT_036_NeuN_pl',\n",
+       " 'PITT_064_NeuN_mn',\n",
+       " 'PITT_064_NeuN_pl',\n",
+       " 'PITT_091_NeuN_mn',\n",
+       " 'PITT_091_NeuN_pl'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "excluded_samples = all_samples - included_samples\n",
+    "excluded_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -258,13 +349,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 48471,\n",
-      "  \"iopub_port\": 38605,\n",
-      "  \"stdin_port\": 42567,\n",
-      "  \"control_port\": 40513,\n",
-      "  \"hb_port\": 58035,\n",
+      "  \"shell_port\": 48901,\n",
+      "  \"iopub_port\": 39275,\n",
+      "  \"stdin_port\": 56709,\n",
+      "  \"control_port\": 43077,\n",
+      "  \"hb_port\": 33039,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"ca1ebe41-3ccc4452a99b847c4bfec1e6\",\n",
+      "  \"key\": \"29f8d83f-6abdad7d60df831bbaf77593\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -273,7 +364,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-9e293532-3286-4e24-8e29-2e1beab3b0fd.json\n",
+      "    $> jupyter <app> --existing kernel-e750de91-809e-4912-9de0-a1316c9f2ced.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
