new default method for sample specific merged PON

--- a/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
+++ b/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
@@ -340,8 +340,37 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 48901,\n",
+      "  \"iopub_port\": 39275,\n",
+      "  \"stdin_port\": 56709,\n",
+      "  \"control_port\": 43077,\n",
+      "  \"hb_port\": 33039,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"29f8d83f-6abdad7d60df831bbaf77593\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-e750de91-809e-4912-9de0-a1316c9f2ced.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
    "source": [
     "%connect_info"
    ]
