--- a/notebook/2020-01-21-mosaicforecast-dev/2020-01-21-mosaicforecast-dev.ipynb
+++ b/notebook/2020-01-21-mosaicforecast-dev/2020-01-21-mosaicforecast-dev.ipynb
@@ -2,13 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import mosaicforecast as mf\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 45707,\n",
+      "  \"iopub_port\": 54451,\n",
+      "  \"stdin_port\": 44613,\n",
+      "  \"control_port\": 37811,\n",
+      "  \"hb_port\": 56155,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"317062e3-b9a5bc293a037256c8d724d0\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-560e6006-d0a1-41fc-9d8b-c6dc47986cbf.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%connect_info"
    ]
   },
   {
