fixed incorrect return value type in pon_without_sample function

--- a/notebook/2020-01-21-mosaicforecast-dev/2020-01-21-mosaicforecast-dev.ipynb
+++ b/notebook/2020-01-21-mosaicforecast-dev/2020-01-21-mosaicforecast-dev.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Development of a wrapper script for MosaicForecast"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -20,6 +27,17 @@
     "%matplotlib inline\n",
     "import mosaicforecast as mf\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter: segmental duplications and clustered sites\n",
+    "\n",
+    "Development of `bsm/src/mosaicforecast.py` lead to the following:\n",
+    "\n",
+    "* The implementation of `MosaicForecast/MuTect2-PoN_filter.py` is so memory inefficient that a typical MuTect2/TNhaplotyper callset saturates even the swap memory."
    ]
   },
   {
