--- a/notebook/2020-01-21-mosaicforecast-dev/2020-01-21-mosaicforecast-dev.ipynb
+++ b/notebook/2020-01-21-mosaicforecast-dev/2020-01-21-mosaicforecast-dev.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -33,11 +33,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filter: segmental duplications and clustered sites\n",
+    "## Filters\n",
+    "\n",
+    "### segmental duplications and clustered sites\n",
     "\n",
     "Development of `bsm/src/mosaicforecast.py` lead to the following:\n",
     "\n",
-    "* The implementation of `MosaicForecast/MuTect2-PoN_filter.py` is so memory inefficient that a typical MuTect2/TNhaplotyper callset saturates even the swap memory."
+    "* The implementation of `MosaicForecast/MuTect2-PoN_filter.py` is so memory inefficient that a typical MuTect2/TNhaplotyper callset saturates even the swap memory.  Therefore this filter was reimplemented using `bcftools` in the `mosaicforecast.segdup_clustered_filter` function (see `bsm/src/mosaicforecast.py`).\n",
+    "* since `MosaicForecast/MuTect2-PoN_filter.py` also filters for allele frequency, its replacement lead to `mosaicforecast.AF_filter`\n",
+    "\n",
+    "### gnomAD filter\n",
+    "\n",
+    "The goal is to remove calls from `input.vcf.gz` that are represented in gnomAD with $\\mathrm{AF} > 0.001$.  The first implementation based on `bcftools annotate` is very inefficient.  Briefly, the command looks like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "if false; then\n",
+    "    gnomADvcf=/projects/shared/gnomAD/gnomad.genomes.r2.1.1.sites.vcf.bgz\n",
+    "    bcftools annotate --threads 15 -a $gnomADvcf -c 'INFO/AF' -Oz -o output.vcf.gz input.vcf.gz\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even on a tiny `input.vcf.gz` with $<100$ records the process did not finish overnight.  The following tricks will be tested to speed up the calculation:\n",
+    "\n",
+    "* remove positions from `$gnomADvcf` that are not contained in `input.vcf.gz`\n",
+    "* the `INFO` field contains many many subfields that it might be the factor that slows down `bcftools annotate`; try removing all subfields other than AF"
    ]
   },
   {
@@ -89,18 +119,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
   }
  },
  "nbformat": 4,
