--- a/notebook/2020-04-07-GENEWIZ-samples/2020-04-07-GENEWIZ-samples.ipynb
+++ b/notebook/2020-04-07-GENEWIZ-samples/2020-04-07-GENEWIZ-samples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Several CommonMind samples were submitted to GENEWIZ for sequencing.  Which samples are still missing from s3://chesslab-bsmn?"
+    "Several CommonMind samples were submitted to GENEWIZ for sequencing.  Which samples are still missing from s3://chesslab-bsmn?  From the list of fastq files in the s3 bucket we also create a sample_list.tsv for the bsmn-pipeline."
    ]
   },
   {
@@ -18,13 +18,15 @@
     "import pandas as pd\n",
     "import subprocess\n",
     "import re\n",
-    "import io"
+    "import io\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Samples submitted to GENEWIZ\n",
     "Import CSV representing the first sheet of `Pooling strategy summary for Attila 07Apr2020.xls` attached to Chaggai's email of 4/7/2020"
    ]
   },
@@ -461,6 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Samples received from GENEWIZ\n",
     "List contents of the `GENEWIZ/30-317737003/` folder in `s3://chesslab-bsmn`"
    ]
   },
@@ -641,8 +644,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating sample_list for bsmn-pipeline\n",
+    "\n",
+    "We use the `from_gw` data frame's `filename` column as a basis for the sample list data frame `slist`.  We add a `#sample_id` and a `location` column using `samples-from-Chaggai.csv` alias `genewiz_serialn.csv` ([syn21982509](https://www.synapse.org/#!Synapse:syn21982509)).\n",
+    "\n",
+    "Note that `samples-from-Chaggai.csv` was manually edited to account for the file name `GMSSM1357_R1_001.fastq.gz` listed in the bucket, which should have been named as `G_R1_001.fastq.gz`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sn = pd.read_csv('/home/attila/projects/bsm/tables/samples-from-Chaggai.csv', index_col='GENEWIZ_serialn')\n",
+    "s3prefix = 's3://chesslab-bsmn/GENEWIZ/30-317737003/'\n",
+    "slistarray = np.array([[sn.loc[re.sub('(^[0-9A-Za-z]+)_.*', '\\\\1', filename), 'CMC_simple_id'], filename, s3prefix + filename] for filename in from_gw['filename']])\n",
+    "slist = pd.DataFrame(slistarray, columns=['#sample_id', 'file_name', 'location'])\n",
+    "slistpath = '/home/attila/projects/bsm/results/2020-04-07-GENEWIZ-samples/sample_list.tsv'\n",
+    "slist.to_csv(slistpath, sep='\\t', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -650,13 +678,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 49385,\n",
-      "  \"iopub_port\": 44759,\n",
-      "  \"stdin_port\": 37529,\n",
-      "  \"control_port\": 49309,\n",
-      "  \"hb_port\": 41303,\n",
+      "  \"shell_port\": 54119,\n",
+      "  \"iopub_port\": 39417,\n",
+      "  \"stdin_port\": 37503,\n",
+      "  \"control_port\": 59531,\n",
+      "  \"hb_port\": 40129,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"3f3a6abb-8d126a787d539f84e0b8994c\",\n",
+      "  \"key\": \"0ea95130-2f86f0fb69a1962aeb806f9a\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -665,7 +693,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-45cfc261-138e-45d7-9369-784e44bcd6b7.json\n",
+      "    $> jupyter <app> --existing kernel-b617bb19-c386-4cec-8371-c93724c5884f.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -675,13 +703,6 @@
    "source": [
     "%connect_info"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
